resources/css/base.css
@charset "utf-8";

/*comment to push*/


/*---GLOBAL---*/


/*set up text resizing for ie9+ */

html {
    font-size: 62.5%;
}

body {
    color: #292929;
    font-family: 'ProximaNovaRegular';
    font-size: 16px;
    font-size: 1.6rem;
    position: relative;
    min-width: 303px;
}

h1 {
    font-family: 'ProximaNovaLight';
    font-size: 40px;
    font-size: 4rem;
    padding-bottom: 35px;
    padding-top: 35px;
}

h2 {
    font-family: 'LibreBaskervilleBold';
    font-size: 26px;
    font-size: 2.6rem;
    margin-bottom: 35px;
}

h3 {
    color: #143A50;
    font-family: 'ProximaNovaBold';
    font-size: 18px;
    font-size: 1.8rem;
    margin-top: 0;
    /* changed to global 0px need to make this more specific margin-top: 75px;*/
    text-transform: uppercase;
}

h4 {
    font-family: 'ProximaNovaSemibold';
    /*16px*/
    font-size: 18px;
    font-size: 1.8rem;
    margin: 0;
}

h4 > small {
    font-family: 'ProximaNovaRegularItalic';
    font-size: 14px;
    font-size: 1.4rem;
}

h5 {}

h6 {}

p {
    font-size: 15.5px;
    font-size: 1.55rem;
}

a {
    color: #477896;
    text-decoration: underline;
}

a:focus,
a:hover {
    text-decoration: none;
}
a.btn, a[role='button'] {
    text-decoration: none;
}

a.btn:focus,
a.btn:hover, 
a[role='button']:focus, 
a[role='button']:hover {
    text-decoration: underline;
}

a[href^="tel"],
a[href^="tel"]:hover,
a[href^="tel"]:focus {
    color: inherit;
    text-decoration: none;
}

h2 small {
    font-family: 'ProximaNovaRegular';
    font-size: 16px;
    font-size: 1.6rem;
    font-style: italic;
}


/* volunteer events page */

.volunteer-event-h1 {
    padding-bottom: 0px;
    padding-bottom: 0rem;
    margin-bottom: 0px;
    margin-bottom: 0rem;
}

.block-text {
    display: block;
}

.volunteer-text {
    color: #5E88A2;
    padding-left: 15px;
    padding-left: 1.5rem;
    margin-bottom: 0px;
    margin-bottom: 0rem;
    margin-top: 0px;
    margin-top: 0rem;
}

.seeking-volunteers {
    margin-top: 10px;
}

.volunteer-h4 {
    color: #5E88A2;
    margin-bottom: 8px;
}

main.volunteer-event-main,
main.secondary.event-main {
    margin-top: 0;
}

.volunteer-contact {
    color: #153B50;
}

.volunteer-details .all-caps {
    margin-bottom: 20px;
    margin-bottom: 2.0rem;
}

.volunteer-details p.text-bold {
    margin-bottom: 0;
}

.volunteer-details p.bottom-padding {
    padding-bottom: 13px;
    padding-bottom: 1.3rem;
}

.email-button,
.learn-more {
    width: 100%;
}

.charity-details .learn-more {
    padding: 10px 0;
}

.charity-details hr {
    width: 66.6666667%;
}

a.email[href^="mailto"],
a.email[href^="mailto"]:hover,
a.email[href^="mailto"]:focus {
    color: inherit;
    text-decoration: none;
}

.event-details-list li {
    margin-bottom: 5px
}

.volunteer-details .add-to-calendar {
    border-radius: 5px;
    margin-top: 20px;
    margin-bottom: 20px;
}


/* end volunteer events page */


/* begin events page*/

.events-vol-desc {
    margin-left: 30px;
}

.events-vol-desc img {
    float: left;
}

.events-vol-desc img + label {
    font-size: 85%;
    margin-left: 4px;
}

.event-main .addthis_sharing_toolbox {
    display: inline-block;
    float: right;
    margin-top: 5px;
}

.event-sort {
    margin-top: 10px;
}

.event-sort select.form-control {
    border-radius: 5px;
    -webkit-appearance: none;
    -moz-appearance: none;
    line-height: 1.33;
    padding: 10px 29px;
}

.select-arrows {
    position: relative;
    display: block;
}

.event-sort .select-arrows:before {
    content: '\f0d8';
    font-family: FontAwesome;
    color: #000;
    position: absolute;
    right: 14px;
    top: 8px;
}

.event-sort .select-arrows:after {
    content: '\f0d7';
    font-family: FontAwesome;
    color: #000;
    position: absolute;
    right: 14px;
    top: 20px;
}

.events-h2 {
    color: #487896;
}

.events-h3 {
    font-family: 'LibreBaskervilleBold';
    font-size: 26px;
    font-size: 2.6rem;
}

.events-h3 a {
    color: #7B7979;
    text-transform: none;
    float: left;
}

.events-h3 a + img {
    float: left;
    margin-left: 5px;
    margin-top: 4px;
}

.events-h4 {
    font-weight: bold;
}

.event-host {
    color: #153B50;
    font-size: 24px;
    font-size: 2.4rem;
}


/* end events page*/


/* begin volunteer search page*/

.vol-event {
    padding-bottom: 0;
    padding-top: 30px;
}

.vol-filters{
    display: block !important;
}

.vol-filters button {
    background: none;
    border: 1px solid #ddd;
    padding: 5px;
    width: 100%;
}

.vol-filters button .caret {
    display: block;
    float: right;
    margin-top: 9px;
}

.vol-filters .dropdown-menu {
    margin-top: 0;
    padding: 5px;
    width: 100%;
}

.vol-filters .dropdown-menu li:last-child {
    margin-bottom: 0;
}

.vol-filters .dropdown-menu label {
    padding-left: 30px;
    position: relative;
    width: 100%;
}
.vol-filters > label{
    margin-top: 15px;
}
.vol-filters li{
    margin-bottom: 20px;
}
.vol-filters > label[for='location'] {
    margin-top: 0;
}
.vol-filters .dropdown-menu input {
    left: 7px;
    margin-right: 5px;
    position: absolute;
    top: 0;
    transform: scale(1.5);
}

.vol-listing .thumbnail {
    padding: 0;
    position: relative;
}

.vol-listing img {
    width: 100%;
}

.volunteer-search-label {
    display: block;
}

.volunteer-search-h1 {
    padding-top: 20px;
    padding-bottom: 0;
}

.volunteer-search-h2 {
    color: #487896;
}

.volunteer-search .display-group label {
    display: block;
    margin-top: 5px;
}

.volunteer-search-main .fa-times-circle {
    color: #487896;
    float: none;
    opacity: 1;
}

.volunteer-search-main .narrow-search {
    color: #934683;
}

.volunteer-search .btn-sort.active {
    background-color: #487896;
}

.volunteer-search .btn-sort {
    background-color: #fff;
}

.volunteer-search .btn-sort.active .fa-th:before, .volunteer-search .btn-sort.active .fa-th-list:before {
    color: #fff;
}

.volunteer-search .btn-sort .fa-th-list:before {
    color: #487896;
}
/* ... */

